// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig should return config with defaults 1`] = `
Object {
  "concurrent": true,
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "ignore": Array [],
  "linters": Object {},
  "relative": false,
  "renderer": "update",
}
`;

exports[`getConfig should return config with defaults for undefined 1`] = `
Object {
  "concurrent": true,
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "ignore": Array [],
  "linters": Object {},
  "relative": false,
  "renderer": "update",
}
`;

exports[`getConfig should set linters 1`] = `
Object {
  "concurrent": true,
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "ignore": Array [],
  "linters": Object {
    "*.js": Array [
      "eslint --fix",
      "git add",
    ],
    ".*rc": "jsonlint",
  },
  "relative": false,
  "renderer": "update",
}
`;

exports[`getConfig should set linters 2`] = `
Object {
  "concurrent": true,
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "ignore": Array [],
  "linters": Object {
    "*.js": [Function],
  },
  "relative": false,
  "renderer": "update",
}
`;

exports[`validateConfig should not throw and should print nothing for advanced valid config 1`] = `""`;

exports[`validateConfig should not throw and should print nothing for custom renderer 1`] = `""`;

exports[`validateConfig should not throw and should print nothing for function linter 1`] = `""`;

exports[`validateConfig should not throw and should print nothing for simple valid config 1`] = `""`;

exports[`validateConfig should not throw and should print validation warnings for mixed config 1`] = `
"
WARN ● Validation Warning:

  Unknown option \\"*.js\\" with value ['eslint --fix', 'git add'] was found in the config root.

  You are probably trying to mix simple and advanced config formats. Adding

  \\"linters\\": {
    \\"*.js\\": [\\"eslint --fix\\",\\"git add\\"]
  }

  will fix it and remove this message.

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;

exports[`validateConfig should print deprecation warning for deprecated options 1`] = `
"
WARN ● Deprecation Warning:

  Option gitDir was removed.

  lint-staged now automatically resolves '.git' directory.

  Please remove gitDir from your configuration.

Please refer to https://github.com/okonet/lint-staged#configuration for more information...
WARN ● Deprecation Warning:

  Option verbose was removed.

  Use the command line flag --debug instead.

  Please remove verbose from your configuration.

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;

exports[`validateConfig should throw and should print validation errors for invalid config 1`] = `
"● Validation Error:

  ignore must be a \`array\` type, but the final value was: \`false\`.

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;

exports[`validateConfig should throw and should print validation errors for invalid linter config 1`] = `
"● Validation Error:

  Invalid value for 'linters[*.js]'.

  Should be a string, a function, or an array of strings and functions.
 
  Configured value is: '*.js'

Please refer to https://github.com/okonet/lint-staged#configuration for more information..."
`;
